@@ -1,5 +1,11 @@
 2006-07-21  MenTaLguY  <mental@rydia.net>
 
+	* src/document-subset.cpp:
+
+	  switch to sigc++ signal for "release"
+
+2006-07-21  MenTaLguY  <mental@rydia.net>
+
 	* src/selection.cpp, src/selection.h:
 
 	  switch to sigc++ signals for "modified" and "release"
